Fix z-index for theme toggle on mobile (#1090)

--- a/sitemedia/scss/components/_controls.scss
+++ b/sitemedia/scss/components/_controls.scss
@@ -39,7 +39,7 @@ div.controls {
 // light/dark mode toggle
 label#theme-toggle {
     position: absolute;
-    z-index: 5;
+    z-index: 7;
     display: block;
     cursor: pointer;
     top: spacing.$spacing-md;
